# Star-Mechs

./: Cargo.toml  README.md  go.mod  main.go
components/economy/: currency.go
components/galaxy/: star.go
components/mech/: hard_points.go
components/names/: person_name.go  person_name_test.go  planet_name.go  star_name.go
components/pilot/: expierence.go  statistics.go
components/pilots/: faction.go
entities/: commander.go  game.go  mech.go  pilot.go  star_system.go
presenters/: presenter.go
src/: components.rs  events.rs  main.rs  plugins.rs  systems.rs
src/assets/: images.rs
src/assets/images/: background.rs  mechs.rs  soldiers.rs  user_interface.rs
src/components/: constants.rs  game_states.rs
src/events/: despawn_entity_event.rs  event_handlers.rs  spawn_sound_event.rs
src/events/event_handlers/: despawn_entity.rs  spawn_sound.rs
src/plugins/: event_handlers.rs  events.rs  resources.rs  running.rs  start.rs  states.rs  user_interface.rs
src/resources/: camera_settings.rs
src/systems/: controllers.rs
src/systems/camera/: camera_movement.rs
src/systems/controllers/: get_location.rs  random_generator.rs
systems/: exploration.go  mission.go  shop.go
systems/generators/: random_generator.go  random_generator_test.go
